src/test/custom/valid/do-while/doWhileBasic.wacc
# simple do-while loop

# Output:
# 0
# 1
# 2
# Finished!

# Program:

begin
  int i = 0;
  do
    println i;
    i = i + 1
  while i < 3;
  println "Finished!"
end
